--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -53,9 +53,8 @@ jobs:
           HUGO_CACHEDIR: ${{ runner.temp }}/hugo_cache
           HUGO_ENVIRONMENT: production
         run: |
-          hugo \
-            --minify \
-            --baseURL "${{ steps.pages.outputs.base_url }}/"
+         hugo --minify --environment production
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
