--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
-baseURL: "https://alessandrosellitto.github.io/"
+baseURL = "https://alessandrosellitto.github.io/"
 title: "Alessandro Sellitto"
 theme: "PaperMod"
 
